# ctk

./: CMakeLists.txt  ctk_version.h.in
cmake/: ctkConfig.cmake.in
ctk/: api_bindings.h  api_c.h  api_compression.h  api_data.h  api_reflib.h  arithmetic.h  ctk.h  exception.h  logger.h  maybe_cast.h  throw_cast.h  type_wrapper.h
ctk/compress/: bit_stream.h  block.h  leb128.h  magnitude.h  matrix.h  multiplex.h
ctk/container/: api_io.h  ctk_part.h  file_epoch.h  file_reflib.h  io.h  leb128.h
ctk/evt/: event_lib.h
ctk/file/: cnt_epoch.h  cnt_reflib.h  ctk_part.h  evt.h  io.h  leb128.h
ctk/misc/: compression.cc.content  compression.cc.preface  compression.h.content  compression.h.preface  generate.sh
examples/: CMakeLists.txt  compression.cc  file.cc  file.py  fix_offsets.cc
ffi/: ctkpy.cc
src/: api_bindings.cc  api_c.cc  api_compression.cc  api_data.cc  api_reflib.cc  arithmetic.cc  exception.cc  logger.cc  maybe_cast.cc  type_wrapper.cc
src/compress/: bit_stream.cc  block.cc  magnitude.cc  matrix.cc  multiplex.cc
src/container/: api_io.cc  ctk_part.cc  file_epoch.cc  file_reflib.cc  io.cc
src/evt/: event_lib.cc
src/file/: cnt_epoch.cc  cnt_reflib.cc  ctk_part.cc  evt.cc  io.cc
test/: CMakeLists.txt  util.cc  util.h  wrap_libeep.h  wrap_thislib.h
test/afl/: CMakeLists.txt  afl_eeph.cc  afl_file_api_read.cc  afl_info.cc  afl_matrix_api_decode.cc  afl_matrix_api_encode_decode.cc  afl_read_evt.cc  afl_read_write_leb128.cc
test/libeep/: CMakeLists.txt  api_eeg.c  api_v4.c  comparison.c  comparison.h  compress_epochmux.cc  container_compeeg.cc  input_txt.c  input_txt.h
test/python/: test_file.py  test_objects.py
test/qcheck/: CMakeLists.txt  qcheck.h  qcheck_bit_stream.cc  qcheck_matrix.cc
test/self/: CMakeLists.txt  api_c.cc  api_data.cc  api_io.cc  api_reflib.cc  compact_int.cc  compress_bitstream.cc  compress_block.cc  compress_histogram.cc  compress_magnitude.cc  compress_matrix.cc  compress_multiplex.cc  container_abstraction.cc  container_evt.cc  container_flat.cc  container_objects.cc  container_submatrix.cc  input_txt_magnitude.cc  leb128.cc  make_block.h  qcheck.h  test_throw_cast.cc
